# default-dev-env

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
app/: __init__.py  main.py
app/common/base/: __init__.py  base_response.py
app/common/exception/: __init__.py  auth_exception.py
app/common/middlewares/: auth_middleware.py
app/common/services/: __init__.py  auth_service.py
app/core/: __init__.py  config.py
app/db/: __init__.py
app/models/: __init__.py  api_key.py
app/taskiq/: __init__.py  broker.py
app/taskiq/tasks/: __init__.py
app/view/: __init__.py
scripts/: api_key_manager.py
tests/: conftest.py
